# CVRPSEP-for-RCC

./: .gitignore  CMakeLists.txt  README.md
Instances/: A-n64-k9.sol  A-n64-k9.vrp  Antwerp1.vrp  Antwerp2.sol  B-n50-k8.sol  B-n68-k9.sol  E-n101-k14.sol  E-n101-k8.sol  E-n51-k5.sol  E-n76-k10.sol  E-n76-k14.sol  E-n76-k7.sol  E-n76-k8.sol  Leuven1.sol  Leuven1.vrp  Leuven2.sol  Loggi-n1001-k31.sol  Loggi-n1001-k31.vrp  Loggi-n401-k23.sol  Loggi-n401-k23.vrp  Loggi-n501-k24.vrp  Loggi-n601-k19.sol  Loggi-n601-k19.vrp  Loggi-n601-k42.sol  Loggi-n601-k42.vrp  Loggi-n901-k42.vrp  M-n101-k10.sol  M-n121-k7.sol  ORTEC-n242-k12.sol  ORTEC-n242-k12.vrp  ORTEC-n323-k21.sol  ORTEC-n323-k21.vrp  ORTEC-n455-k41.sol  ORTEC-n455-k41.vrp  ORTEC-n701-k64.sol  ORTEC-n701-k64.vrp  P-n101-k4.sol  P-n50-k8.sol  P-n50-k8.vrp  P-n55-k10.sol  (+20 more)
RCC_CVRP/: base_model.h  load.h  main.cpp
RCC_CVRP/cvrpsep/: memmod.h
cmake/: FindGurobi.cmake
